--- a/Test_Login/log.html
+++ b/Test_Login/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7547],[],[[4,0,0,[],[1,152,7393],[[0,5,6,0,7,8,0,0,[1,152,2603],[[153,2,9],[158,2,10]]],[0,11,6,0,12,0,0,0,[1,2755,44],[]],[0,13,6,0,14,15,0,0,[1,2799,61],[[2800,2,16]]],[0,17,18,0,19,20,0,0,[1,2861,2001],[[4862,2,21]]],[0,22,6,0,23,24,0,0,[1,4863,88],[[4863,2,25]]],[0,17,18,0,19,20,0,0,[1,4951,2001],[[6952,2,21]]],[0,13,6,0,14,26,0,0,[1,6954,71],[[6955,2,27]]],[0,28,6,0,29,0,0,0,[1,7025,519],[[7543,2,30]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,6513],[],[[4,0,0,[],[1,277,6233],[[0,5,6,0,7,8,0,0,[1,278,4732],[[279,2,9],[295,2,10]]],[0,11,6,0,12,0,0,0,[1,5011,74],[]],[0,13,6,0,14,15,0,0,[1,5085,122],[[5087,2,16]]],[0,17,6,0,18,19,0,0,[1,5208,256],[[5209,2,20]]],[0,17,6,0,18,21,0,0,[1,5465,113],[[5466,2,22]]],[0,13,6,0,14,23,0,0,[1,5579,141],[[5579,2,24]]],[0,25,6,0,26,27,0,0,[1,5720,258],[]],[0,28,6,0,29,0,0,0,[1,5979,528],[[6507,2,30]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestLoginNoPassword","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginNoPassword.robot","*TestLoginNoPassword.robot","*Open Browser And Navigate To URL","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Edge' to base url '<a href=\"http://localhost:5173\">http://localhost:5173\x3c/a>'.","*Executing: C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\common\\windows\\selenium-manager.exe --browser edge --output json","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*css=.bg-blue-500","*Clicking element 'css=.bg-blue-500'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*${DELAY}","*Slept 2 seconds","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name=email, guy.guy0205245@gmail.com","*Typing text 'guy.guy0205245@gmail.com' into text field 'name=email'.","*css=.border-white:nth-child(1)","*Clicking element 'css=.border-white:nth-child(1)'.","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-15.png\"><img src=\"selenium-screenshot-15.png\" width=\"800px\">\x3c/a>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestLoginIncompletePassword","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginIncompletePassword.robot","*TestLoginIncompletePassword.robot","*Open Browser And Navigate To URL","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Edge' to base url '<a href=\"http://localhost:5173\">http://localhost:5173\x3c/a>'.","*Executing: C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\common\\windows\\selenium-manager.exe --browser edge --output json","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*css=.bg-blue-500","*Clicking element 'css=.bg-blue-500'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name=email, guy.guy020524@gmail.com","*Typing text 'guy.guy020524@gmail.com' into text field 'name=email'.","*name=password, Guyza","*Typing text 'Guyza' into text field 'name=password'.","*css=.border-white:nth-child(1)","*Clicking element 'css=.border-white:nth-child(1)'.","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*class=card-body","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-27.png\"><img src=\"selenium-screenshot-27.png\" width=\"800px\">\x3c/a>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"TestLoginNoPassword","name":"TestLoginNoPassword","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"TestLoginIncompletePassword","name":"TestLoginIncompletePassword","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1719385811575;
+window.output["baseMillis"] = 1719473888730;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7566;
+window.output["generated"] = 6555;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
