--- a/Test_Login/report.html
+++ b/Test_Login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,6513],[],[[4,0,0,[],[1,277,6233],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,94597],[],[[4,0,5,[],[1,180,9691],[]],[6,0,7,[],[1,9873,11188],[]],[8,0,9,[],[1,21063,11242],[]],[10,0,11,[],[1,32306,11072],[]],[12,0,13,[],[1,43378,5840],[]],[14,0,15,[],[1,49219,11284],[]],[16,0,17,[],[1,60504,11562],[]],[18,0,19,[],[1,72071,14069],[]],[20,0,21,[],[1,86144,8445],[]]],[],[9,9,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestLoginIncompletePassword","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginIncompletePassword.robot","*TestLoginIncompletePassword.robot","*Open Browser And Navigate To URL"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestLoginAll","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginAll.robot","*TestLoginAll.robot","*Login by Keyword TC01","*<p>ทดสอบการ Login\x3c/p>","*Login by Keyword TC02","*<p>ทดสอบการ Login แบบอีเมลไม่ตรง\x3c/p>","*Login by Keyword TC03","*<p>ทดสอบการ Login แบบรหัสไม่ตรง\x3c/p>","*Login by Keyword TC04","*<p>ทดสอบการ Login แบบไม่ใส่ @\x3c/p>","*Login by Keyword TC05","*<p>ทดสอบการ Login แบบรหัสไม่ถึง 8\x3c/p>","*Login by Keyword TC06","*<p>ทดสอบการ Login แบบไม่ใส่รหัสผ่าน\x3c/p>","*Login by Keyword TC07","*<p>ทดสอบการ Login แบบไม่ใส่ อีเมล\x3c/p>","*Login by Keyword TC08","*<p>ทดสอบการ Login แบบ Emtry\x3c/p>","*Login by Keyword TC09","*<p>ทดสอบการ Login แบบมากกว่า 1 roles\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"TestLoginIncompletePassword","name":"TestLoginIncompletePassword","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:34","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:01:35","fail":0,"id":"s1","label":"TestLoginAll","name":"TestLoginAll","pass":9,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1719473888730;
+window.output["baseMillis"] = 1719827464172;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6555;
+window.output["generated"] = 94818;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
