--- a/Test_Register/log.html
+++ b/Test_Register/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12957],[],[[4,0,0,[],[1,219,12732],[[0,5,6,0,7,8,0,0,[1,219,3530],[[220,2,9],[228,2,10]]],[0,11,6,0,12,0,0,0,[1,3749,36],[]],[0,13,6,0,14,15,0,0,[1,3785,77],[[3786,2,16]]],[0,17,18,0,19,20,0,0,[1,3862,2000],[[5862,2,21]]],[0,22,6,0,23,24,0,0,[1,5863,85],[[5863,2,25]]],[0,17,18,0,19,20,0,0,[1,5949,2001],[[7949,2,21]]],[0,22,6,0,23,26,0,0,[1,7951,82],[[7953,2,27]]],[0,17,18,0,19,20,0,0,[1,8033,2002],[[10034,2,21]]],[0,13,6,0,14,28,0,0,[1,10036,43],[[10037,2,29]]],[0,30,6,0,31,32,0,0,[1,10079,235],[]],[0,33,6,0,34,0,0,0,[1,10315,435],[[10750,2,35]]],[0,36,6,0,37,0,0,0,[1,10750,2199],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,9450],[],[[4,0,0,[],[1,191,9256],[[0,5,6,0,7,8,0,0,[1,191,3131],[[192,2,9],[198,2,10]]],[0,11,6,0,12,0,0,0,[1,3323,29],[]],[0,13,14,0,15,16,0,0,[1,3353,2001],[[5354,2,17]]],[0,18,6,0,19,20,0,0,[1,5354,47],[[5355,2,21]]],[0,13,14,0,15,16,0,0,[1,5401,2002],[[7402,2,17]]],[0,18,6,0,19,22,0,0,[1,7404,41],[[7405,2,23]]],[0,13,14,0,15,16,0,0,[1,7446,2001],[[9446,2,17]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestLoginInValidemail","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginInValidemail.robot","*TestLoginInValidemail.robot","*Open Browser And Navigate To URL","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Edge' to base url '<a href=\"http://localhost:5173\">http://localhost:5173\x3c/a>'.","*Executing: C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\common\\windows\\selenium-manager.exe --browser edge --output json","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*css=.bg-blue-500","*Clicking element 'css=.bg-blue-500'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*${DELAY}","*Slept 2 seconds","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name=email, guy.guy020524@gmail.com","*Typing text 'guy.guy020524@gmail.com' into text field 'name=email'.","*name=password, Guyza123!","*Typing text 'Guyza123!' into text field 'name=password'.","*css=.border-white:nth-child(1)","*Clicking element 'css=.border-white:nth-child(1)'.","*Wait Until Element Contains","*<p>Waits until the element <code>locator\x3c/code> contains <code>text\x3c/code>.\x3c/p>","*xpath=/html/body/div[2]/div, Invalid email or password!","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-29.png\"><img src=\"selenium-screenshot-29.png\" width=\"800px\">\x3c/a>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestRegister","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Register\\TestRegister.robot","*TestRegister.robot","*Open Browser And Navigate To URL","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Edge' to base url '<a href=\"http://localhost:5173\">http://localhost:5173\x3c/a>'.","*Executing: C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\common\\windows\\selenium-manager.exe --browser edge --output json","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*${DELAY}","*Slept 2 seconds","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*css=.bg-blue-500","*Clicking element 'css=.bg-blue-500'.","*css=.underline","*Clicking element 'css=.underline'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"TestLoginInValidemail","name":"TestLoginInValidemail","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"TestRegister","name":"TestRegister","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1720117804051;
+window.output["baseMillis"] = 1720116864413;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13023;
+window.output["generated"] = 9477;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
