--- a/Test_Login/report.html
+++ b/Test_Login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12957],[],[[4,0,0,[],[1,219,12732],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,30189],[],[[4,0,5,[],[1,166,30022],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestLoginInValidemail","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginInValidemail.robot","*TestLoginInValidemail.robot","*Open Browser And Navigate To URL"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestLoginforget","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginforget.robot","*TestLoginforget.robot","*Open Browser Navigate To URL And Forget Password","*<p>Open the browser, navigate to URL, and perform the 'Forgot Password' process.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"TestLoginInValidemail","name":"TestLoginInValidemail","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:30","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"TestLoginforget","name":"TestLoginforget","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1720117804051;
+window.output["baseMillis"] = 1721397976904;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13023;
+window.output["generated"] = 30217;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
