--- a/Test_Payment/report.html
+++ b/Test_Payment/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16512],[],[[4,0,5,[],[1,161,16348],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4822],[],[[4,0,5,[],[1,199,4621],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestLoginMoreone","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginMoreone.robot","*TestLoginMoreone.robot","*Login success","*<p>ทดสอบการ Login มากกว่า 1 role\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestPayment","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Payment\\TestPayment.robot","*TestPayment.robot","*Open Browser Navigate To URL Payment","*<p>Forgot Password process Failed to send OTP.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"TestLoginMoreone","name":"TestLoginMoreone","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"TestPayment","name":"TestPayment","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721727116853;
+window.output["baseMillis"] = 1721726773273;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16536;
+window.output["generated"] = 4838;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
