--- a/Test_Login/report.html
+++ b/Test_Login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16512],[],[[4,0,5,[],[1,161,16348],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,16466],[],[[4,0,0,[],[0,298,16165,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestLoginMoreone","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginMoreone.robot","*TestLoginMoreone.robot","*Login success","*<p>ทดสอบการ Login มากกว่า 1 role\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestLoginMoreone","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLoginMoreone.robot","*TestLoginMoreone.robot","*TC6002 เข้าสู่ระบบของผู้ใช้แบบมีมากกว่า 1 บทบาท","*Element 'xpath=//*[@id=\"root\"]/div[3]/div[2]/div[2]/div/div[1]/div/h1' did not get text ''ชื่อธุรกิจ : Suppha1akHotel'' in 10 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"TestLoginMoreone","name":"TestLoginMoreone","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:16","fail":1,"id":"s1","label":"TestLoginMoreone","name":"TestLoginMoreone","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721727116853;
+window.output["baseMillis"] = 1722539147572;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16536;
+window.output["generated"] = 16493;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
