--- a/Test_Register/log.html
+++ b/Test_Register/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,9450],[],[[4,0,0,[],[1,191,9256],[[0,5,6,0,7,8,0,0,[1,191,3131],[[192,2,9],[198,2,10]]],[0,11,6,0,12,0,0,0,[1,3323,29],[]],[0,13,14,0,15,16,0,0,[1,3353,2001],[[5354,2,17]]],[0,18,6,0,19,20,0,0,[1,5354,47],[[5355,2,21]]],[0,13,14,0,15,16,0,0,[1,5401,2002],[[7402,2,17]]],[0,18,6,0,19,22,0,0,[1,7404,41],[[7405,2,23]]],[0,13,14,0,15,16,0,0,[1,7446,2001],[[9446,2,17]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11444],[],[[4,0,0,[],[1,324,11118],[[0,5,6,0,7,8,0,0,[1,325,4586],[[326,2,9],[341,2,10]]],[0,11,6,0,12,0,0,0,[1,4912,65],[]],[0,13,6,0,14,15,0,0,[1,4978,184],[[4979,2,16]]],[0,13,6,0,14,17,0,0,[1,5163,77],[[5164,2,18]]],[0,19,0,0,0,0,0,0,[1,5241,880],[[0,20,6,0,21,22,0,0,[1,5241,701],[]],[0,23,6,0,24,25,0,0,[1,5942,179],[[5943,2,26]]]]],[0,27,0,0,0,0,0,0,[1,6121,124],[[0,23,6,0,24,28,0,0,[1,6122,123],[[6123,2,29]]]]],[0,30,0,0,0,0,0,0,[1,6246,193],[[0,23,6,0,24,31,0,0,[1,6246,193],[[6246,2,32]]]]],[0,33,34,0,35,36,0,0,[1,6440,5001],[[11441,2,37]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestRegister","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Register\\TestRegister.robot","*TestRegister.robot","*Open Browser And Navigate To URL","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Edge' to base url '<a href=\"http://localhost:5173\">http://localhost:5173\x3c/a>'.","*Executing: C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\common\\windows\\selenium-manager.exe --browser edge --output json","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*${DELAY}","*Slept 2 seconds","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*css=.bg-blue-500","*Clicking element 'css=.bg-blue-500'.","*css=.underline","*Clicking element 'css=.underline'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestRegister","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Register\\TestRegister.robot","*TestRegister.robot","*Open Browser And Navigate To URL","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'Edge' to base url '<a href=\"http://localhost:5173\">http://localhost:5173\x3c/a>'.","*Executing: C:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\common\\windows\\selenium-manager.exe --browser edge --output json","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${GetStart}","*Clicking element 'id=GetStarted'.","*${Sing-up}","*Clicking element 'id=NoAccount-HaveAccount'.","*InputName","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*${Name}, 2s","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${Name}, Suttiguy","*Typing text 'Suttiguy' into text field 'name=name'.","*InputLastName","*${LastName}, Kaewsakun","*Typing text 'Kaewsakun' into text field 'name=lastName'.","*InputEmail","*${Email}, Payterlon@gmail.com","*Typing text 'Payterlon@gmail.com' into text field 'name=email'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5s","*Slept 5 seconds"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"TestRegister","name":"TestRegister","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"TestRegister","name":"TestRegister","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1720116864413;
+window.output["baseMillis"] = 1722832115797;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9477;
+window.output["generated"] = 11555;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
