--- a/Test_search/report.html
+++ b/Test_search/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,25272],[],[[4,0,5,[],[1,176,25095],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5598],[],[[4,0,0,[],[1,169,5428],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestforgetFailed","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_ForgetPassword\\TestforgetFailed.robot","*TestforgetFailed.robot","*Open Browser Navigate To URL And Forget Password","*<p>Forgot Password process Failed to send OTP.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*SearchByNoHomeStay","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_search\\SearchByNoHomeStay.robot","*SearchByNoHomeStay.robot","*Open Browser get FilterByProvince"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:25","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"TestforgetFailed","name":"TestforgetFailed","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"SearchByNoHomeStay","name":"SearchByNoHomeStay","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1721399484587;
+window.output["baseMillis"] = 1722846337975;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 25293;
+window.output["generated"] = 5617;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
