--- a/Test_Register/report.html
+++ b/Test_Register/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11444],[],[[4,0,0,[],[1,324,11118],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,31216],[],[[4,0,0,[],[0,249,30965,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestRegister","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Register\\TestRegister.robot","*TestRegister.robot","*Open Browser And Navigate To URL"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestRegister","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Register\\TestRegister.robot","*TestRegister.robot","*RegisterUser","*Element 'id=otp' not visible after 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"TestRegister","name":"TestRegister","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:31","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:31","fail":1,"id":"s1","label":"TestRegister","name":"TestRegister","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1722832115797;
+window.output["baseMillis"] = 1723191016816;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11555;
+window.output["generated"] = 31251;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
