--- a/Test_ViewDetail/report.html
+++ b/Test_ViewDetail/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11888],[],[[4,0,0,[],[1,270,11616],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,6362],[],[[4,0,0,[],[1,169,6192],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*SearchByFilterProvince","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_search\\SearchByFilterProvince.robot","*SearchByFilterProvince.robot","*Open Browser get FilterByProvince"]);
+window.output["strings"] = window.output["strings"].concat(["*","*DetailHomestay","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_ViewDetail\\DetailHomestay.robot","*DetailHomestay.robot","*TC3001 ดูรายละเอียดที่พัก"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"SearchByFilterProvince","name":"SearchByFilterProvince","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"DetailHomestay","name":"DetailHomestay","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1723191738904;
+window.output["baseMillis"] = 1723187785227;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11930;
+window.output["generated"] = 6383;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
