--- a/Test_Login/report.html
+++ b/Test_Login/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,33139],[],[[4,0,0,[5],[1,194,12522],[]],[6,0,0,[7],[1,12718,12251],[]],[8,0,0,[9],[1,24971,8166],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,38157],[[4,5,6,0,[],[1,24,38131],[],[[7,0,0,[8],[1,228,14352],[]],[9,0,0,[10],[1,14581,13929],[]],[11,0,0,[12],[1,28511,9643],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestLogin","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\TestLogin.robot","*TestLogin.robot","*TC6001 เข้าสู่ระบบของผู้ใช้","*PassLogin","*TC6002 เข้าสู่ระบบของผู้ใช้แบบมีมากกว่า 1 บทบาท","*PassLoginMoreOneRole","*TC6003 เข้าสู่ระบบโดยที่รูปแบบอีเมลไม่ตรงกับระบบ","*PassLoginInvalidEmail and Password"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\tests","*tests","*Test Suite","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Login\\tests\\test_suite.robot","*tests/test_suite.robot","*TC6001 เข้าสู่ระบบของผู้ใช้","*PassLogin","*TC6002 เข้าสู่ระบบของผู้ใช้แบบมีมากกว่า 1 บทบาท","*PassLoginMoreOneRole","*TC6003 เข้าสู่ระบบโดยที่รูปแบบอีเมลไม่ตรงกับระบบ","*PassLoginInvalidEmail and Password"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:33","fail":0,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:13","fail":0,"label":"PassLogin","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"label":"PassLoginInvalidEmail and Password","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"label":"PassLoginMoreOneRole","pass":1,"skip":0}],[{"elapsed":"00:00:33","fail":0,"id":"s1","label":"TestLogin","name":"TestLogin","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:38","fail":0,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:14","fail":0,"label":"PassLogin","pass":1,"skip":0},{"elapsed":"00:00:10","fail":0,"label":"PassLoginInvalidEmail and Password","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"label":"PassLoginMoreOneRole","pass":1,"skip":0}],[{"elapsed":"00:00:38","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:38","fail":0,"id":"s1-s1","label":"Tests.Test Suite","name":"Test Suite","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1724921162482;
+window.output["baseMillis"] = 1725954640259;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 33172;
+window.output["generated"] = 38186;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
