--- a/Test_Payment/report.html
+++ b/Test_Payment/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,6276],[],[[4,0,0,[],[1,219,6055],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,24515],[],[[4,0,0,[5],[1,211,24300],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*SearchByNameHomestay","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_search\\SearchByNameHomestay.robot","*SearchByNameHomestay.robot","*TC2002 ค้นหาที่พักโดยค้นหาจากชื่อที่พัก"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestPayment","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Payment\\TestPayment.robot","*TestPayment.robot","*TC12001 การชำระเงินที่พัก ผ่าน Promptpay","*TC12001"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"SearchByNameHomestay","name":"SearchByNameHomestay","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:24","fail":0,"label":"TC12001","pass":1,"skip":0}],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"TestPayment","name":"TestPayment","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1725610652582;
+window.output["baseMillis"] = 1725615982923;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6304;
+window.output["generated"] = 24553;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
