--- a/Test_ViewDetail/report.html
+++ b/Test_ViewDetail/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12716],[],[[4,0,0,[],[1,209,12506],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,19748],[[4,5,6,0,[],[1,17,19730],[],[[7,0,0,[],[1,191,19555],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TC3001","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_ViewDetail\\TC3001.robot","*TC3001.robot","*TC3001 ดูรายละเอียดที่พัก"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_ViewDetail\\test","*test","*TC3001","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_ViewDetail\\test\\TC3001.robot","*test/TC3001.robot","*TC3001 ดูรายละเอียดห้องพัก จากการกรอกจากจังหวัด"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"TC3001","name":"TC3001","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1","label":"Test.TC3001","name":"TC3001","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1724403337551;
+window.output["baseMillis"] = 1725958498482;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12749;
+window.output["generated"] = 19762;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
