--- a/Test_Payment/report.html
+++ b/Test_Payment/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,24515],[],[[4,0,0,[5],[1,211,24300],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,72555],[],[[4,0,0,[],[1,217,72336],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestPayment","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Payment\\TestPayment.robot","*TestPayment.robot","*TC12001 การชำระเงินที่พัก ผ่าน Promptpay","*TC12001"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestPayment","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Payment\\TestPayment.robot","*TestPayment.robot","*TC12001 การชำระเงินที่พัก ผ่าน Visa"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:24","fail":0,"label":"TC12001","pass":1,"skip":0}],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"TestPayment","name":"TestPayment","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:13","fail":0,"id":"s1","label":"TestPayment","name":"TestPayment","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1725615982923;
+window.output["baseMillis"] = 1728408171512;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24553;
+window.output["generated"] = 72689;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
