--- a/Test_CRUDBooking/report.html
+++ b/Test_CRUDBooking/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,53076],[],[[4,0,0,[],[1,308,52767],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,43030],[],[[4,0,0,[],[1,180,17464],[]],[5,0,0,[],[0,17647,25382,6],[]]],[],[2,1,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestCRUD","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_CRUDBooking\\TestCRUD.robot","*TestCRUD.robot","*TC11001 ดูสถานะการจองที่พัก"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestCRUD","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_CRUDBooking\\TestCRUD.robot","*TestCRUD.robot","*TC11001 ดูสถานะการจองที่พัก","*TC11001 ดูสถานะการจองที่แพ็คเกจ","*Element 'id=status2' not visible after 15 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:53","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:53","fail":0,"id":"s1","label":"TestCRUD","name":"TestCRUD","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:43","fail":1,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:43","fail":1,"id":"s1","label":"TestCRUD","name":"TestCRUD","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1726512696096;
+window.output["baseMillis"] = 1728455029882;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 53124;
+window.output["generated"] = 43046;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
