--- a/Test_Payment/report.html
+++ b/Test_Payment/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,72555],[],[[4,0,0,[],[1,217,72336],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,116492],[],[[4,0,0,[],[1,217,38059],[]],[5,0,0,[],[1,38277,37145],[]],[6,0,0,[],[1,75423,41068],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestPayment","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_Payment\\TestPayment.robot","*TestPayment.robot","*TC12001 การชำระเงินที่พัก ผ่าน Visa"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestPayment","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_Payment\\TestPayment.robot","*TestPayment.robot","*TC12001 การชำระเงินที่พัก ผ่าน Visa","*TC12002 การชำระเงินแพ็คเกจ ผ่าน Visa","*TC12003 การชำระเงินที่พัก กรณีที่อยากเช่าห้องเพิ่มในวันเดียวกัน"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:12","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:13","fail":0,"id":"s1","label":"TestPayment","name":"TestPayment","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:56","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:01:56","fail":0,"id":"s1","label":"TestPayment","name":"TestPayment","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1728408171512;
+window.output["baseMillis"] = 1728451647899;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 72689;
+window.output["generated"] = 116524;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
