--- a/Test_ViewDetail/report.html
+++ b/Test_ViewDetail/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,26217],[],[[4,0,0,[],[1,225,14461],[]],[5,0,0,[],[1,14688,11529],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,58418],[],[[4,0,0,[],[1,382,58035],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Testview","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_ViewDetail\\Testview.robot","*Testview.robot","*TC3001 ดูรายละเอียดที่พัก จากการค้นหาจากชื่อที่พัก","*TC3002 ดูรายละเอียดห้องพัก จากการกรอกจากจังหวัด"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Testview","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_ViewDetail\\Testview.robot","*Testview.robot","*TC3001 ดูรายละเอียดที่พัก จากการค้นหาจากชื่อที่พัก"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"Testview","name":"Testview","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:58","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:58","fail":0,"id":"s1","label":"Testview","name":"Testview","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1726515793178;
+window.output["baseMillis"] = 1729136365663;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 26320;
+window.output["generated"] = 58469;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
