--- a/Test_search/report.html
+++ b/Test_search/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,60039],[],[[4,0,0,[5],[1,194,10455],[]],[6,0,0,[5],[1,10653,49384],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,27314],[],[[4,0,0,[],[1,191,13654],[]],[5,0,0,[],[1,13848,13465],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*test Search","*C:\\Users\\User\\Desktop\\Final_Project\\test_H2OProject\\Test_search\\test_Search.robot","*test_Search.robot","*TC2001 ค้นหาที่พักโดยค้นหาจากชื่อที่จังหวัด","*PassSearchProvince","*TC2002 ค้นหาที่พักโดยค้นหาจากชื่อที่จังหวัด"]);
+window.output["strings"] = window.output["strings"].concat(["*","*test Search","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_Search\\test_Search.robot","*test_Search.robot","*TC2003 ค้นหาที่แพ็คเกจโดยค้นหาจากชื่อจังหวัด","*TC2004 ค้นหาที่แพ็คเกจโดยค้นหาจากชื่อแพ็คเกจ"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:00","fail":0,"label":"All Tests","pass":2,"skip":0}],[{"elapsed":"00:01:00","fail":0,"label":"PassSearchProvince","pass":2,"skip":0}],[{"elapsed":"00:01:00","fail":0,"id":"s1","label":"test Search","name":"test Search","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"test Search","name":"test Search","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1728404793904;
+window.output["baseMillis"] = 1729500933479;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 60070;
+window.output["generated"] = 27332;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
