--- a/Test_Recommend/report.html
+++ b/Test_Recommend/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,15966],[],[[4,0,0,[],[1,200,15765],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,31232],[],[[4,0,0,[],[1,193,16251],[]],[5,0,0,[],[1,16445,14785],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*test Search","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_search\\test_Search.robot","*test_Search.robot","*TC2005 ค้นหาที่พักโดยค้นหาจากชื่อจังหวัด จากการกรองข้อมูล"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test Recommend","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_Recommend\\Test_Recommend.robot","*Test_Recommend.robot","*TC1001 แนะนำที่พัก จาก Homestays Recommend","*TC1002 แนะนำที่แพ็คเกจ จาก Recommended Packages"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"test Search","name":"test Search","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:31","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:31","fail":0,"id":"s1","label":"Test Recommend","name":"Test Recommend","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1729881797324;
+window.output["baseMillis"] = 1730004989051;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16014;
+window.output["generated"] = 31248;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
