--- a/Test_ViewDetail/report.html
+++ b/Test_ViewDetail/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,58418],[],[[4,0,0,[],[1,382,58035],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,33489],[],[[4,0,0,[],[1,184,17081],[]],[5,0,0,[],[1,17268,16219],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Testview","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_ViewDetail\\Testview.robot","*Testview.robot","*TC3001 ดูรายละเอียดที่พัก จากการค้นหาจากชื่อที่พัก"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Testview","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_ViewDetail\\Testview.robot","*Testview.robot","*TC3003 ค้นหาที่พัก โดยกรองจาก Homestays Recommend","*TC3004 ค้นหาที่พัก โดยกรองจาก Package Recommend"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:58","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:58","fail":0,"id":"s1","label":"Testview","name":"Testview","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:33","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:33","fail":0,"id":"s1","label":"Testview","name":"Testview","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1729136365663;
+window.output["baseMillis"] = 1729964065401;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 58469;
+window.output["generated"] = 33516;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
