--- a/Test_CRUDBooking/report.html
+++ b/Test_CRUDBooking/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,38301],[],[[4,0,0,[],[0,498,14451,5],[]],[6,0,0,[],[1,14950,23348],[]]],[],[2,1,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,42358],[],[[4,0,0,[],[1,239,20610],[]],[5,0,0,[],[1,20852,21506],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestCRUD","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_CRUDBooking\\TestCRUD.robot","*TestCRUD.robot","*TC11001 ดูสถานะการจองที่พัก","*Element with locator 'xpath=//*[@id=\"root\"]/div[3]/div[2]/div[2]/div/div/div[3]/div/div[7]/div/div[1]/div[1]/div' not found.","*TC11001 ดูสถานะการจองที่แพ็คเกจ"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestCRUD","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_CRUDBooking\\TestCRUD.robot","*TestCRUD.robot","*TC11001 ดูสถานะการจองที่พัก","*TC11002 ดูสถานะการจองที่แพ็คเกจ"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:38","fail":1,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:38","fail":1,"id":"s1","label":"TestCRUD","name":"TestCRUD","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:42","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:42","fail":0,"id":"s1","label":"TestCRUD","name":"TestCRUD","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1729133495015;
+window.output["baseMillis"] = 1730033712226;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 38381;
+window.output["generated"] = 42385;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
