--- a/Test_Payment/report.html
+++ b/Test_Payment/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,85141],[],[[4,0,0,[],[1,172,36752],[]],[5,0,0,[],[0,36938,15808,6],[]],[7,0,0,[],[0,52746,32393,8],[]]],[],[3,1,2,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,40685],[],[[4,0,0,[],[1,194,40489],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestPayment","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_Payment\\TestPayment.robot","*TestPayment.robot","*TC12001 การชำระเงินที่พัก ผ่าน Visa","*TC12002 การชำระเงินแพ็คเกจ ผ่าน Visa","*Element with locator 'id=default-carousel' not found.","*TC12003 การชำระเงินที่พัก กรณีที่อยากเช่าห้องเพิ่มในวันเดียวกัน","*Element with locator 'xpath=/html/body/div[2]/div/div[6]/button[1]' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestPayment","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_Payment\\TestPayment.robot","*TestPayment.robot","*TC12002 การชำระเงินแพ็คเกจ ผ่าน Visa"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:25","fail":2,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:25","fail":2,"id":"s1","label":"TestPayment","name":"TestPayment","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:40","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:41","fail":0,"id":"s1","label":"TestPayment","name":"TestPayment","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1729963100524;
+window.output["baseMillis"] = 1730033474911;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 85174;
+window.output["generated"] = 40708;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
