--- a/Test_ViewDetail/report.html
+++ b/Test_ViewDetail/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,33489],[],[[4,0,0,[],[1,184,17081],[]],[5,0,0,[],[1,17268,16219],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,76463],[],[[4,0,0,[],[1,180,18211],[]],[5,0,0,[],[1,18392,19381],[]],[6,0,0,[],[1,37775,17548],[]],[7,0,0,[],[1,55324,21136],[]]],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Testview","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_ViewDetail\\Testview.robot","*Testview.robot","*TC3003 ค้นหาที่พัก โดยกรองจาก Homestays Recommend","*TC3004 ค้นหาที่พัก โดยกรองจาก Package Recommend"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Testview","*C:\\Users\\User\\Desktop\\Final_Project\\Project\\test_H2OProject\\Test_ViewDetail\\Testview.robot","*Testview.robot","*TC3001 ค้นหาที่พัก โดยกรองจาก Homestays Recommend","*TC3002 ค้นหาที่พัก โดยกรองจาก Package Recommend","*TC3003 ดูรายละเอียดที่พัก จากการค้นหาจากชื่อที่พัก","*TC3004 ดูรายละเอียดแพ็คเกจ จากการค้นหาจากชื่อแพ็คเกจ"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:33","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:33","fail":0,"id":"s1","label":"Testview","name":"Testview","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:16","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:01:16","fail":0,"id":"s1","label":"Testview","name":"Testview","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1729964065401;
+window.output["baseMillis"] = 1730039574612;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 33516;
+window.output["generated"] = 76499;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
